# LocalAISecurity

./: LICENSE  README.md
.claude/: settings.local.json
LocalAISecurity/: .claudeignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SimpleMain.cpp  ai_engine.py  classifier.py  i18n.py  models.py  requirements.txt  scanner.py  start_app.py  ui_components.py
LocalAISecurity/AI_Clean_Engine/include/: clean_ai_engine.h
LocalAISecurity/AI_Clean_Engine/src/: clean_ai_engine.cpp
LocalAISecurity/AI_Common/include/: nn_ops.h
LocalAISecurity/AI_Security_Engine/include/: security_ai_engine.h
LocalAISecurity/AI_Security_Engine/src/: security_ai_engine.cpp
LocalAISecurity/Core_Kernel/include/: core_kernel.h  load_avoidance.h
LocalAISecurity/Core_Kernel/src/: core_kernel.cpp  load_avoidance.cpp
LocalAISecurity/Local_Data/include/: local_data.h
LocalAISecurity/Local_Data/src/: local_data.cpp
LocalAISecurity/Model_Train_Script/: collect_real_data.py  data_utils.py  requirements.txt  train_both_models.py
LocalAISecurity/Model_Train_Script/clean_model/: train_clean_model.py
LocalAISecurity/Model_Train_Script/dataset/: generate_dataset.py
LocalAISecurity/Model_Train_Script/security_model/: train_security_model.py
LocalAISecurity/Net_Update_Module/include/: net_update_module.h
LocalAISecurity/Net_Update_Module/src/: net_update_module.cpp
LocalAISecurity/Rule_Database/include/: rule_database.h
LocalAISecurity/Rule_Database/src/: rule_database.cpp
LocalAISecurity/UI_App/: main.cpp  main_window.cpp  main_window.h
LocalAISecurity/models/: clean_model.onnx.data  clean_model_best.pt  security_model.onnx.data  security_model_best.pt
LocalAISecurity/tests/: conftest.py  test_ai_engine.py  test_classifier.py  test_data_utils.py  test_scanner.py
